syntax = "proto3";

package Nebula.Services.Fragments.Inventory;
import "google/api/annotations.proto";
import "Protos/Nebula/Services/Fragments/Inventory/StockMovementRecord.proto";

service MovementInterface {
	rpc GetMovementHistory (GetMovementHistoryRequest) returns (GetMovementHistoryResponse) {
		option (google.api.http) = {
			get: "/api/v1/inventory/movements/history"
		};
	}

	rpc RecordMovement (RecordMovementRequest) returns (RecordMovementResponse) {
		option (google.api.http) = {
			post: "/api/v1/inventory/movements/record"
			body: "*"
		};
	}
}

message GetMovementHistoryRequest {
	string ProductId = 1;
	string LocationId = 2;
}

message GetMovementHistoryResponse {
	string Error = 1;
	repeated StockMovementRecord MovementRecords = 2;
}

message RecordMovementRequest {}

message RecordMovementResponse {
	string Error = 1;
}